--- a/css/main.css
+++ b/css/main.css
@@ -37,3 +37,49 @@ h1{
 .tres, .dos, .uno{
     display: none;
 }
+
+/* for smaller screen*/ 
+
+@media (max-width: 767px){
+    
+        .night{
+            background-image: url('../assets/img/night.jpg');
+            width: 100%;
+        }
+        .tres{
+            display: block;
+        }
+        .dos, .uno{
+            display: none;
+        }
+    }
+    
+    /* for medium screen*/ 
+    
+    @media (min-width: 768px) and (max-width: 991px) {
+        .dawn{
+            background-image: url('../assets/img/dawn.png');
+            width: 100%;
+        }
+        .dos{
+            display: block;
+        }
+        .uno, .tres{
+            display: none;
+        }
+    } 
+    
+    /* for larger screen*/ 
+    
+    @media (min-width: 992px) {
+        .day{
+            background-image:url('../assets/img/sunny-day.jpg');
+            width: 100%;
+        }
+        .uno{
+            display: block;
+        }   
+        .dos, .tres{
+            display: none;
+        }
+    }    
